[package]

name = "openstack"
description = "OpenStack SDK for Rust"
version = "0.4.1"  # remember to update html_root_url
authors = ["Dmitry Tantsur <divius.inside@gmail.com>"]
homepage = "https://github.com/dtantsur/rust-openstack"
repository = "https://github.com/dtantsur/rust-openstack"
documentation = "https://docs.rs/openstack"
readme = "README.md"
license = "Apache-2.0"
keywords = ["api", "cloud", "openstack"]
categories = ["api-bindings"]
edition = "2021"
rust-version = "1.56"

[features]

default = ["compute", "image", "network", "native-tls", "object-storage"]
compute = []
image = []
network = []
native-tls = ["reqwest/default-tls", "osauth/native-tls"]
object-storage = []
rustls = ["reqwest/rustls-tls", "osauth/rustls"]

[dependencies]

bytes = { version = "^0.5" }
chrono = { version = "^0.4", features = ["serde"] }
eui48 = { version = "^1.0", features = ["disp_hexstring", "serde"] }
fallible-iterator = "^0.2.0"
ipnet = { version = "^2.0", features = ["serde"] }
futures = "^0.3"
log = "^0.4"
osauth = { version = "^0.3.3", default-features = false }
osproto = "^0.2.1"
pin-project = "^1.0"
reqwest = { version = "^0.10", default-features = false, features = ["gzip", "json", "stream"] }
serde = "^1.0"
serde_derive = "^1.0"
serde_json = "^1.0"
serde_yaml = "^0.8"
tokio = { version = "^0.2.23", features = ["io-driver", "rt-core"] }
waiter = "^0.1"

[dev-dependencies]
env_logger = "^0.7"
md-5 = "^0.9"
hex = "^0.4"

[lib]

name = "openstack"
path = "src/lib.rs"
