[package]
name = "openstack"
description = "OpenStack SDK for Rust"
version = "0.5.0"  # remember to update html_root_url
authors = ["Dmitry Tantsur <divius.inside@gmail.com>"]
homepage = "https://github.com/dtantsur/rust-openstack"
repository = "https://github.com/dtantsur/rust-openstack"
documentation = "https://docs.rs/openstack"
readme = "README.md"
license = "Apache-2.0"
keywords = ["api", "cloud", "openstack"]
categories = ["api-bindings"]
edition = "2021"
rust-version = "1.56"

[features]
default = ["compute", "image", "network", "native-tls", "object-storage"]
compute = []
image = []
network = []
native-tls = ["reqwest/default-tls", "osauth/native-tls"]
object-storage = ["tokio-util"]
rustls = ["reqwest/rustls-tls", "osauth/rustls"]

[dependencies]
async-trait = "^0.1"
chrono = { version = "^0.4", features = ["serde"] }
eui48 = { version = "^1.0", features = ["disp_hexstring", "serde"] }
ipnet = { version = "^2.0", features = ["serde"] }
futures = "^0.3"
log = "^0.4"
osauth = { version = "^0.5", default-features = false, features = ["stream"] }
osproto = "^0.2.0"
pin-project = "^1.0"
reqwest = { version = "^0.11", default-features = false, features = ["gzip", "json", "stream"] }
serde = "^1.0"
serde_derive = "^1.0"
serde_json = "^1.0"
serde_yaml = "^0.8"
tokio-util = { version = "^0.7", features = ["codec", "compat"], optional = true }
async-stream = "^0.3"
waiter = { version = "^0.2" }

[dev-dependencies]
env_logger = "^0.7"
md-5 = "^0.9"
hex = "^0.4"
tokio = { version = "^1.21", features = ["macros"] }

[lib]
name = "openstack"
path = "src/lib.rs"
