[package]
name = "openstack"
description = "OpenStack SDK for Rust"
version = "0.5.0"  # remember to update html_root_url
authors = ["Dmitry Tantsur <divius.inside@gmail.com>"]
homepage = "https://github.com/dtantsur/rust-openstack"
repository = "https://github.com/dtantsur/rust-openstack"
documentation = "https://docs.rs/openstack"
readme = "README.md"
license = "Apache-2.0"
keywords = ["api", "cloud", "openstack"]
categories = ["api-bindings"]
edition = "2021"
rust-version = "1.70"

[features]
default = ["block-storage", "compute", "image", "network", "native-tls", "object-storage"]
block-storage = []
compute = []
image = []
network = []
native-tls = ["reqwest/default-tls", "osauth/native-tls"]
object-storage = ["tokio-util"]
rustls = ["reqwest/rustls-tls", "osauth/rustls"]

[dependencies]
async-stream = "^0.3"
async-trait = "^0.1"
chrono = { version = "^0.4", features = ["serde"] }
macaddr = { version = "^1.0", features = ["serde_std"]}
futures = "^0.3"
ipnet = { version = "^2.0", features = ["serde"] }
log = "^0.4"
osauth = { version = "^0.4", default-features = false, features = ["stream"] }
pin-project = "^1.0"
reqwest = { version = "^0.11", default-features = false, features = ["gzip", "json", "stream"] }
serde = "^1.0"
serde_derive = "^1.0"
serde_json = "^1.0"
serde_yaml = "^0.9"
tokio-util = { version = "^0.7", features = ["codec", "compat"], optional = true }
waiter = { version = "^0.2" }

[dev-dependencies]
env_logger = "^0.9"
md-5 = "^0.10"
hex = "^0.4"
tokio = { version = "^1.21", features = ["macros"] }

[lib]
name = "openstack"
path = "src/lib.rs"
